asm_tests/other_testfiles/invalid_files/error4.s
.name "MORO"
.comment "MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJES"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!"MORMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!JESTA!TA!JESTA!"

kissa:
ld %12, %kissa
